# sylvan

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRANSPARENCY.md  mkdocs.yml  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-wheels.yml  dependabot-auto-merge.yml  docs.yml  publish.yml  release-drafter.yml  rust-ci.yml  tests.yml
docs/: index.md
docs/extending-sylvan/: adding-languages.md  building-tools.md  schema-and-migrations.md  the-orm.md  writing-providers.md
docs/for-your-agent/: subagent-access.md  teaching-your-agent.md  the-tool-reference.md
docs/getting-started/: configuration.md  installation.md  your-first-project.md
docs/working-with-sylvan/: browsing-and-reading.md  cli.md  kubernetes.md  memory-and-preferences.md  multi-repo-projects.md  quality-and-security.md  searching-code.md  the-dashboard.md  token-efficiency.md  understanding-impact.md  working-with-libraries.md
rust/: Cargo.toml  README.md
rust/crates/sylvan-analysis/: Cargo.toml
rust/crates/sylvan-analysis/src/: lib.rs
rust/crates/sylvan-cli/: Cargo.toml
rust/crates/sylvan-cli/src/: lib.rs
rust/crates/sylvan-core/: Cargo.toml
rust/crates/sylvan-core/src/: discovery.rs  extraction.rs  lib.rs  symbol.rs
rust/crates/sylvan-dashboard/: Cargo.toml
rust/crates/sylvan-dashboard/src/: lib.rs
rust/crates/sylvan-database/: Cargo.toml
rust/crates/sylvan-database/src/: lib.rs
rust/crates/sylvan-git/: Cargo.toml
rust/crates/sylvan-git/src/: lib.rs
rust/crates/sylvan-indexing/: Cargo.toml
rust/crates/sylvan-indexing/examples/: smoke_discover.rs
rust/crates/sylvan-indexing/src/: call_sites.rs  complexity.rs  docs.rs  enrichment.rs  extraction.rs  grammars.rs  lib.rs  watch.rs
rust/crates/sylvan-indexing/src/complexity/: provider.rs
rust/crates/sylvan-indexing/src/discovery/: classify.rs  git.rs  mod.rs  walker.rs
rust/crates/sylvan-indexing/src/extraction/: languages.rs  spec.rs
rust/crates/sylvan-indexing/src/extraction/languages/: bash.rs  blade.rs  c_family.rs  csharp.rs  css.rs  dart.rs  elixir.rs  erlang.rs  fortran.rs  gdscript.rs  gleam.rs  go.rs  graphql.rs  groovy.rs  haskell.rs  hcl.rs  java.rs  javascript.rs  json.rs  julia.rs  kotlin.rs  less.rs  lua.rs  nix.rs  objc.rs  perl.rs  php.rs  proto.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  scss.rs  sql.rs  stylus.rs  swift.rs  typescript.rs  vue.rs
rust/crates/sylvan-indexing/tests/: discovery_walk.rs
rust/crates/sylvan-logging/: Cargo.toml
rust/crates/sylvan-logging/src/: config.rs  error.rs  level.rs  lib.rs  subscriber.rs
rust/crates/sylvan-logging/tests/: init_is_one_shot.rs
rust/crates/sylvan-providers/: Cargo.toml
rust/crates/sylvan-providers/src/: embedding.rs  lib.rs
rust/crates/sylvan-providers/src/embedding/: download.rs  ort.rs  runtime.rs
rust/crates/sylvan-py/: Cargo.toml
rust/crates/sylvan-py/src/: call_sites.rs  complexity.rs  discovery.rs  docs.rs  embedding.rs  extraction.rs  grammars.rs  lib.rs  logging.rs  watch.rs
rust/crates/sylvan-search/: Cargo.toml
rust/crates/sylvan-search/src/: lib.rs
rust/crates/sylvan-security/: Cargo.toml
rust/crates/sylvan-security/src/: filters.rs  lib.rs
rust/crates/sylvan-server/: Cargo.toml
rust/crates/sylvan-server/src/: lib.rs
rust/crates/sylvan-tools/: Cargo.toml
rust/crates/sylvan-tools/src/: lib.rs
src/sylvan/: __init__.py  __main__.py  api.py  cli.py  config.py  context.py  error_codes.py  grammars.py  hooks.py  logging.py
tests/: conftest.py  test_cluster_protocol.py  test_cluster_websocket.py  test_config.py  test_context_providers.py  test_discovery_perf.py  test_errors.py  test_file_watcher.py  test_filter_drift.py  test_hooks.py  test_incremental.py  test_logging_level_respected.py  test_meta.py  test_migrations.py  test_rust_discovery.py  test_rust_extension.py
tests/fixtures/: claude_code_responses.json  ollama_responses.json
tests/test_analysis/: test_build_reference_graph.py  test_dead_code.py  test_hierarchy.py  test_quality.py  test_quality_analyzers.py  test_reference_graph.py
tests/test_cli/: test_cli.py  test_main.py
tests/test_cluster/: test_cluster_logging.py
tests/test_dashboard/: test_dashboard.py  test_dashboard_server.py
tests/test_db/: test_builder.py  test_connection.py  test_migrations.py  test_postgres_dialect.py  test_schema.py
tests/test_events/: test_events.py
tests/test_git/: test_blame.py  test_deps.py  test_diff.py
tests/test_indexing/: test_blade_extractor.py  test_call_extractor.py  test_complexity.py  test_discovery.py  test_doc_parsers.py  test_extractor.py  test_file_watcher.py  test_import_resolver.py  test_imports.py  test_json_extractor.py  test_kubernetes.py  test_language_plugins.py  test_openapi_parser.py  test_orchestrator.py  test_stylesheet_extractor.py  test_summarizer.py  test_yaml_parser.py
tests/test_libraries/: test_manager.py  test_repair.py  test_resolvers.py  test_source_fetcher.py
tests/test_orm/: conftest.py  test_advanced.py  test_bulk_update.py  test_cluster_models.py  test_connection.py  test_fields.py  test_identity_map.py  test_model.py  test_query_builder.py  test_relations.py  test_scopes.py  test_search.py  test_search_mixin.py  test_where_operators.py
tests/test_providers/: test_claude_code.py  test_heuristic.py  test_ollama.py  test_ollama_setup.py  test_section_summaries.py
tests/test_queue/: test_queue.py
tests/test_scaffold/: __init__.py  test_scaffold.py
tests/test_search/: test_embeddings.py
tests/test_security/: test_filters.py  test_patterns.py
tests/test_server/: test_editor_setup.py  test_hook_builder.py  test_server_init.py  test_startup.py  test_transports.py
tests/test_services/: test_analysis.py  test_briefing.py  test_git.py  test_indexing.py  test_library.py  test_memory.py  test_meta.py  test_orm_cascade.py  test_peak.py  test_preference.py  (+5 more)
(+380 files in other folders)
