[package]
name = "sylvan-indexing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "File discovery, parsing, extraction, and the indexing pipeline for sylvan."

[dependencies]
sylvan-core = { path = "../sylvan-core" }
sylvan-security = { path = "../sylvan-security" }
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
