[package]
name = "sylvan-indexing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "File discovery, parsing, extraction, and the indexing pipeline for sylvan."

[dependencies]
sylvan-core = { path = "../sylvan-core" }
sylvan-security = { path = "../sylvan-security" }
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
thiserror = "2"
fancy-regex = "0.17"
once_cell = "1"
tree-sitter = "0.26.8"
tree-sitter-css = "0.25"
tree-sitter-python = "0.25"
pulldown-cmark = { version = "0.13", default-features = false }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
