[package]
name = "sylvan-indexing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "File discovery, parsing, extraction, and the indexing pipeline for sylvan."

[dependencies]
sylvan-core = { path = "../sylvan-core" }
sylvan-security = { path = "../sylvan-security" }
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
thiserror = "2"
fancy-regex = "0.17"
once_cell = "1"
tree-sitter = "0.26.8"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
pulldown-cmark = { version = "0.13", default-features = false }
serde_json = "1"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
