[package]
name = "sylvan-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Filter rules, secret detection, and path validation for sylvan."

[dependencies]
glob = "0.3"
